--- a/src/app/components/finanzas/finanzas.component.html
+++ b/src/app/components/finanzas/finanzas.component.html
@@ -140,7 +140,7 @@
       </div>
     </mat-tab>
   </mat-tab-group>
-  <div class="footer">
+  <div class="miembros__footer">
     <button mat-stroked-button color="primary" (click)="back()">Regresar</button>
   </div>
 </div>
