--- a/src/app/components/miembros-home/miembros-home.component.html
+++ b/src/app/components/miembros-home/miembros-home.component.html
@@ -4,10 +4,15 @@
 
   <!-- TOOLBAR -->
   <div class="miembros__toolbar">
-    <div class="miembros__btns">
-      <button mat-raised-button color="primary" (click)="agregarPersona()">+ Agregar Persona</button>
-      <button mat-raised-button color="primary" (click)="agregarFamilia()">+ Agregar Familia</button>
-    </div>
+<div class="miembros__btns">
+  <button mat-raised-button color="primary" class="btn btn--primary" (click)="agregarPersona()">
+    + Agregar Persona
+  </button>
+
+  <button mat-raised-button color="primary" class="btn btn--primary" (click)="agregarFamilia()">
+    + Agregar Familia
+  </button>
+</div>
 
     <div class="miembros__search">
       <mat-icon>search</mat-icon>
